--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
 		"lodash-es": "^4.17.21",
 		"promise-file-reader": "^1.0.3",
 		"svelte-codemirror-editor": "^1.4.0"
-	}
+	},
+	"license": "MIT"
 }
